Add minimal height to empty autosuggest field

--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -230,6 +230,7 @@
 }
 
 .account-options ul.as-selections {
+    min-height: 27px;
     width: 600px;
     border-radius: 0;
     -moz-border-radius: 0;
